tests/snapshots/examples_fixtures/type_system__failing__150_stage_parse_suppresses_type.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/150_stage_parse_suppresses_type.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E076]: UNCLOSED DELIMITER

Expected a closing `}` to match this opening `{` in function `main`.

  --> examples/type_system/failing/150_stage_parse_suppresses_type.flx:7:19
  |
7 | fn main() -> Unit {
  |                   ^

Help:
  Add `}` to close the body of function `main`.


--> compiler error[E071]: UNTERMINATED STRING

String literal is missing closing quote.

  --> examples/type_system/failing/150_stage_parse_suppresses_type.flx:8:18
  |
8 |     let broken = "unterminated
  |                  ^^^^^^^^^^^^^

Hint:
  Add a closing " at the end of the string.

Found 2 errors.
== stdout ==
<not executed>
